--- a/gulimall-common/pom.xml
+++ b/gulimall-common/pom.xml
@@ -61,10 +61,10 @@
         </dependency>
 
         <!-- 配置中心来做配置管理-->
-        <!--<dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>javax.validation</groupId>
@@ -80,7 +80,7 @@
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.1.0.RELEASE</version>
+                <version>2.2.1.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
